--- a/the-phonebook/src/App.css
+++ b/the-phonebook/src/App.css
@@ -1,3 +1,24 @@
 input {
     margin: 5px 10px;
 }
+
+button {
+    border:none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    border-radius: 6px;
+    margin-left: 10px;
+    cursor: pointer;
+    font-weight:bold;
+    transition: transform 0.1s ease, box-shadow 0.2s ease;
+}
+
+button:hover {
+    box-shadow: 0 2px 4px;
+}
+button:active{
+    transform:scale(0.95);
+}
+
+.delete {
+    background-color: rgb(253, 126, 152);
+}
